# fox

./: .dockerignore  .gitignore  CHANGELOG.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  Cross.toml  Dockerfile  Dockerfile.cpu  Dockerfile.cuda  Dockerfile.rocm  Dockerfile.vulkan  LICENSE-APACHE  LICENSE-MIT  Makefile  PLAN.md  README.md  SECURITY.md  SPONSORS.md  STATUS.md  build.rs  docker-compose.bench.yml  docker-compose.yml  fox.service  install.ps1  install.sh  mkdocs.yml  registry.json
.github/: FUNDING.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: bench.yml  ci.yml  docker.yml  docs.yml  release.yml  secret-scanning.yml  test-linux-build.yml  update-llamacpp.yml
benches/: results.json
docs/: benchmarks.md  configuration.md  deployment.md  faq.md  features.md  index.md  installation.md  integrations.md  introduction.md  migration-from-ollama.md  quickstart.md  troubleshooting.md
docs/api/: ollama.http  ollama.md  openai.http  openai.md
docs/cli/: alias.md  bench-kv.md  bench-prefill.md  bench-spec.md  bench.md  models.md  probe.md  pull.md  rm.md  run.md  serve.md
docs/design/: engine-capabilities-checklist.md  model-architecture-rework.md  serving-robustness.md  speculative-decoding.md  speculative-roadmap.md  structured-output.md  vllm-gap-analysis.md
examples/: curl.sh  langchain.py  openwebui.md
scripts/: bench-embed-gate.sh  bench-embed-run.sh  bench-gate.sh  bench-publish.sh  bench-vision-compare.sh  bench-vision-unique.sh  bench-vision.sh  bench_embeddings.sh  benchmark.sh  build-release-local.sh  e2e_smoke.py  e2e_smoke.sh  e2e_thinking.sh  install-hooks.sh  stress_test.sh  test-ci-linux.sh
scripts/hooks/: pre-push
src/: config.rs  lib.rs  main.rs  metrics.rs  model_discovery.rs  model_registry.rs  registry.rs
src/api/: auth.rs  error.rs  mod.rs  pull_handler.rs  router.rs  routes.rs  test_helpers.rs  types.rs
src/api/ollama/: chat.rs  embed.rs  generate.rs  management.rs  mod.rs
src/api/shared/: digest.rs  extractor.rs  image.rs  inference.rs  json_schema.rs  mod.rs  sampling_defaults.rs  streaming.rs
src/api/types/: embeddings.rs  mod.rs  ollama.rs  pull.rs  shared.rs  tools.rs  v1.rs
src/api/v1/: chat.rs  chat_auto.rs  completions.rs  embeddings.rs  mod.rs  models.rs  pipelines.rs  tools.rs
src/cli/: alias.rs  bench.rs  bench_kv.rs  bench_prefill.rs  bench_spec.rs  discover.rs  gpu_info.rs  inspect.rs  list.rs  mcp.rs  mod.rs  models.rs  probe.rs  ps.rs  pull.rs  rm.rs  run.rs  search.rs  serve.rs  show.rs  theme.rs
src/cli/utils/: format.rs  gpu.rs  mod.rs  path.rs
src/engine/: ffi.rs  logits.rs  mod.rs  model.rs  mtmd_ffi.rs  output_filter.rs  run.rs  speculative.rs
src/engine/backend/: candle_backend.rs  llama_cpp_backend.rs  mod.rs  router.rs
src/engine/model/: error.rs  llama_cpp.rs  mirostat.rs  mod.rs  model_info.rs  sampling.rs  stub.rs
src/engine/model/candle/: arch_runner.rs  chat_template.rs  gguf_loader.rs  gguf_metadata.rs  llama_arch.rs  llama_model.rs  mod.rs  tokenizer.rs
src/engine/model/llama_cpp/: batch.rs  golden.rs  mod.rs  (+3 more)
src/kv_cache/: mod.rs
src/mcp/: mod.rs
src/model_registry/: arch_table.rs  config.rs  diagnostics.rs  entry.rs  inspect.rs  loader.rs  mod.rs
src/orchestration/: graph.rs  interpolation.rs  mod.rs
src/scheduler/: batch.rs  mod.rs  prefix_cache.rs  schedule.rs
src/system_probe/: gpu.rs  mod.rs
src/tools/: mod.rs
src/tools/builtins/: http_fetch.rs  json_extract.rs  mod.rs
tests/: candle_llama_smoke.rs  candle_tokenizer_smoke.rs  inspect_smoke.rs  integration.rs
