[package]
name = "ferrumox"
version = "0.10.0"
edition = "2021"
description = "High-performance LLM inference engine - alternative to Ollama and vLLM"
license = "MIT OR Apache-2.0"

[features]
default = []
cuda = []
metal = []
cpu-only = []

[dependencies]
tokio = { version = "1.41", features = ["rt-multi-thread", "sync", "time", "macros", "signal"] }
axum = { version = "0.7", features = ["json", "macros"] }
tower-http = { version = "0.5", features = ["cors"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
clap = { version = "4.5", features = ["derive", "env"] }
anyhow = "1.0"
rand = "0.8"
reqwest = { version = "0.12", features = ["json", "stream"] }
tokio-stream = "0.1"
futures = "0.3"
async-trait = "0.1"
uuid = { version = "1.11", features = ["v4"] }
async-stream = "0.3"

prometheus = "0.14"
indicatif = "0.17"
crossterm = "0.28"
dialoguer = "0.11"
ahash = "0.8.12"
sha2 = "0.10"
hex = "0.4"
lru = "0.16.3"
dashmap = "6"
toml = "0.8"
bytes = "1"

# Optional

[build-dependencies]
bindgen = "0.69"
cmake = "0.1"
cc = "1.0"

[[bin]]
name = "fox"
path = "src/main.rs"

[[bin]]
name = "fox-bench"
path = "src/bin/bench.rs"

[dev-dependencies]
tokio-test = "0.4"
tempfile = "3"
tower = { version = "0.4", features = ["util"] }
http-body-util = "0.1"
